// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SolidColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-1mgg0ls-SolidColor"
  >
    <div
      class="css-92fgvr-SolidColor"
    >
      <div
        class="css-1smpc93-SolidColor"
      >
        <div
          class="css-6bf4yd-CopyContainer"
          style="display: inline-block;"
        >
          .fill-red
        </div>
      </div>
      <div
        class="css-1lyzsra-SolidColor"
      >
        #ee3322, $fill-red
      </div>
    </div>
    <div
      class="css-19lyg85-SolidColor"
      style="display: inline-block;"
    />
  </div>
</DocumentFragment>
`;

exports[`SolidColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-1mhhg7b"
  >
    <div
      class="css-1mgg0ls-SolidColor"
    >
      <div
        class="css-92fgvr-SolidColor"
      >
        <div
          class="css-1smpc93-SolidColor"
        >
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            .fill-red
          </div>
        </div>
        <div
          class="css-1lyzsra-SolidColor"
        >
          #ee3322, $fill-red
        </div>
      </div>
      <div
        class="css-19lyg85-SolidColor"
        style="display: inline-block;"
      />
    </div>
    <div
      class="css-1mgg0ls-SolidColor"
    >
      <div
        class="css-92fgvr-SolidColor"
      >
        <div
          class="css-1smpc93-SolidColor"
        >
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            .fill-red-lighter
          </div>
        </div>
        <div
          class="css-1lyzsra-SolidColor"
        >
          #feebe9, $fill-red-lighter
        </div>
      </div>
      <div
        class="css-1brlwzb-SolidColor"
        style="display: inline-block;"
      />
    </div>
    <div
      class="css-1mgg0ls-SolidColor"
    >
      <div
        class="css-92fgvr-SolidColor"
      >
        <div
          class="css-1smpc93-SolidColor"
        >
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            .fill-pink
          </div>
        </div>
        <div
          class="css-1lyzsra-SolidColor"
        >
          #e40c78, $fill-pink
        </div>
      </div>
      <div
        class="css-1jun2mr-SolidColor"
        style="display: inline-block;"
      />
    </div>
    <div
      class="css-1mgg0ls-SolidColor"
    >
      <div
        class="css-92fgvr-SolidColor"
      >
        <div
          class="css-1smpc93-SolidColor"
        >
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            .fill-blue
          </div>
        </div>
        <div
          class="css-1lyzsra-SolidColor"
        >
          #0f65ef, $fill-blue
        </div>
      </div>
      <div
        class="css-1fl1hou-SolidColor"
        style="display: inline-block;"
      />
    </div>
    <div
      class="css-1mgg0ls-SolidColor"
    >
      <div
        class="css-92fgvr-SolidColor"
      >
        <div
          class="css-1smpc93-SolidColor"
        >
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            .fill-purple
          </div>
        </div>
        <div
          class="css-1lyzsra-SolidColor"
        >
          #6645dd, $fill-purple
        </div>
      </div>
      <div
        class="css-1b8snqp-SolidColor"
        style="display: inline-block;"
      />
    </div>
    <div
      class="css-1mgg0ls-SolidColor"
    >
      <div
        class="css-92fgvr-SolidColor"
      >
        <div
          class="css-1smpc93-SolidColor"
        >
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            .fill-promoted-orange
          </div>
        </div>
        <div
          class="css-1lyzsra-SolidColor"
        >
          #ffee00,  $fill-yellow
        </div>
      </div>
      <div
        class="css-1rbj1vq-SolidColor"
        style="display: inline-block;"
      />
    </div>
    <div
      class="css-1mgg0ls-SolidColor"
    >
      <div
        class="css-92fgvr-SolidColor"
      >
        <div
          class="css-1smpc93-SolidColor"
        >
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            .fill-twitter
          </div>
        </div>
        <div
          class="css-1lyzsra-SolidColor"
        >
          #55acee, $fill-twitter
        </div>
      </div>
      <div
        class="css-1ts5k65-SolidColor"
        style="display: inline-block;"
      />
    </div>
  </div>
</DocumentFragment>
`;
